--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url("https://res.cloudinary.com/muuba/image/upload/v1653318470/bg-pattern-top_l6pa6u.svg")  top, url("https://res.cloudinary.com/muuba/image/upload/v1653318470/bg-pattern-top_l6pa6u.svg") bottom;
-  background-size:cover ;
+  background: rgb(17, 212, 212);
   background-repeat: no-repeat;
   flex-direction: column;
  
@@ -19,9 +18,7 @@ body {
 }
 
 .img-section {
-  background: url("https://res.cloudinary.com/muuba/image/upload/v1653318446/bg-pattern-card_rvtoiq.svg");
-  background-size: cover;
-  background-repeat: no-repeat;
+  background: rgb(10, 122, 126);
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   position: relative;
